Fixed avatar overlap
Updated about me and fixed avatar text overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,6 +25,14 @@
 			height: 11px;
 			width: 15px;
 		}
+		
+		.circleinfo
+		{
+			padding-right:5px;
+			padding-bottom:1px;
+			height: 11px;
+			width: 15px;
+		}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block;
@@ -2360,7 +2368,7 @@
 				top: 0;
 				width: 275px;
 				z-index: 10002;
-				width: 275px;
+				width: 293px;
 				background: #222729 url("images/overlay.png");
 				box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
 			}
